--- a/src/main/resources/templates/getMovieByCollection.html
+++ b/src/main/resources/templates/getMovieByCollection.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>getMovieById</title>
+    <title>getMovieByName</title>
 </head>
 <body>
 	<table border="1">
@@ -12,7 +12,7 @@
 			<td>Movie Name</td>
 			<td>Movie Collection</td>
 		</tr>
-		<tr>
+		<tr th:each="movie : ${movies}">
             <td th:text="${movie.movieId}"></td>
             <td th:text="${movie.name}"></td>
             <td th:text="${movie.collection}"></td>
