--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 	<title>Movie Search</title>
@@ -26,7 +26,9 @@
 </head>
 
 <body>
-	<h1>Search</h1>
+	<p>	
+		<h1>Search</h1> <a th:href="@{/login}">Admin</a>
+	</p>
 	<a href="#" id="getMovieById">Get Movie By ID</a>
 	<a href="#" id="getMovieByName">Get Movie By Name</a>
 	<a href="#" id="getMovieByCollection">Get Movie By Collection</a>
@@ -45,7 +47,7 @@
 			<button type="submit">Enter the Movie Name</button>
 		</form>
 	</div>
-	
+
 	<div id="searchByCollection" style="display:none;">
 		<form action="#" th:action="@{/movies/collection}" method="get">
 			<input type="text" name="collection" placeholder="Enter movie collection" required>
