--- a/src/main/resources/templates/newMovie.html
+++ b/src/main/resources/templates/newMovie.html
@@ -2,10 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Admin page</title>
 </head>
 <body>
-	<h1>home</h1>
-	<a th:href="@{/login}"> <button>Login</button> </a>
+	<h2>Admin page</h2>
 </body>
 </html>
