pagina newMovie e alteracoes

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <p th:text="${message}"></p>
-    <a th:href="@{/index}">home</a>
+    <a th:href="@{/}">home</a>
 </body>
 </html>
