projeto concluido - detalhes pendentes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 
 	<div id="searchById" style="display:none;">
 		<form id="movieForm" action="#" method="get">
-			<label for="id">Enter the Movie ID:</label>
+			<label for="movieId">Enter the Movie ID:</label>
 			<input type="text" placeholder="Enter movie ID" id="id" name="movieId" required>
 			<input type="submit" value="Search">
 		</form>
