--- a/src/main/resources/templates/newMovie.html
+++ b/src/main/resources/templates/newMovie.html
@@ -8,14 +8,14 @@
 
 <body>
 	<h2>Enter new Movie Details</h2>
-	<form action="#" th:action="@{/movies/add}" method="post">
+	<form th:action="@{/movies/movieAdded}" method="post">
 		<label for="id">Enter the Movie ID:</label>
-		<input type="text" name="id" placeholder="Enter movie ID" required>
+		<input type="text" name="movieId" placeholder="Enter movie ID" required>
 		<label for="id">Enter the Movie Name:</label>
 		<input type="text" name="name" placeholder="Enter movie name" required>
 		<label for="id">Enter the Movie Collection:</label>
 		<input type="text" name="collection" placeholder="Enter movie collection" required>
-		<button type="submit">ADD</button>
+		<input type="submit" value="ADD">
 	</form>
 </body>
 
